# browser-agent-test-fixture

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  architecture.json  browser-agent-preflight.json  claude-progress.txt  environment_features.json  features.json  fixture.db  project-state.json  pyproject.toml  qa-report.json  qa-smoke-results.json  qa-test-credentials.json  render.yaml  requirements.txt  service-catalog.json  start.sh  test.db
.claude/: README.md  settings.json
.claude/agents/: architect.md  backend-builder.md  build-lead.md  chain.md  deployment-prep.md  evaluator.md  frontend-builder.md  orchestrator.md  parallel.md  qa-lead.md  qa-tester.md  router.md
.claude/commands/: status.md
.claude/hooks/: agent-gate.py  audit-deps.py  auto-assign.py  build-gate.py  commit-guard.py  compliance-log.sh  component-monitor.sh  dep-guard.py  hook-log.txt  issue-detector.sh  localhost-guard.py  nextconfig-guard.py  package-guard.py  path-guard.py  permission-retry.py  post-compact.py  stop-failure.py  task-logger.py
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
alembic/: env.py
frontend/: jest.config.js  next.config.mjs  package-lock.json  package.json
scripts/: api_crud_tester.py  build-report.py  entity_model.py  qa-smoke-test.py  test-browser-agent.py  test-qa-harness.js  validate-architecture.py  validate-crud.py  validate-deploy.sh
src/fixture/: auth.py  database.py  main.py  models.py
tests/: conftest.py  test_auth.py  test_health.py  test_models.py  test_projects.py  test_tasks.py  test_url_preview.py
(+39 files in other folders)
