[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fixture"
version = "1.0.0"
description = "Standalone test fixture for validating the browser agent + QA smoke test"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.10.0",
    "pydantic[email]>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.25",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fixture"]

[tool.pytest.ini_options]
testpaths = ["tests"]
